--- a/Pages/style.scss
+++ b/Pages/style.scss
@@ -12,7 +12,7 @@ html, body {
     background-color: #e2e2e2
 }
 body  {
-        background-image: url(/Images/01ImagenPrincipal.jpg);
+        background-image: url(../ImagenPrincipal.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
 }
